syntax = "proto3";
package sedachain.pkr.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/sedaprotocol/seda-chain/x/pkr/types";

// GenesisState defines pkr module's genesis state.
message GenesisState {
  repeated ValidatorPubKeys validator_pub_keys = 1 [(gogoproto.nullable) = false];
}

// ValidatorPubKeys defines a validator's list of registered public keys
// primarily used in the x/pkr genesis state. 
message ValidatorPubKeys {
  string validator_addr = 1 [(cosmos_proto.scalar) = "cosmos.ValidatorAddressString"];
  repeated IndexPubKeyPair pub_keys = 2 [(gogoproto.nullable) = false];
}

// IndexPubKeyPair defines an index - public key pair.
message IndexPubKeyPair {
  uint32 index = 1;
  google.protobuf.Any pub_key = 2 [(cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey"];
}
